# lingdong

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_on_macosx.sh  build_on_rocky_linux.sh  build_on_ubuntu.sh  build_test.sh  conanfile.txt  config.yaml  linux-clang-conan-profile  run_test.sh
.github/workflows/: c-cpp.yml  macos-cpp.yml  ubuntu-cpp.yml
demo/: demo.md
demo/blog/: .upload_history.json  config.toml  config.yaml  package-lock.json
demo/blog/pages/: about.md  linlang.md  works.md
demo/blog/posts/: 2011-12-07-cron-usage.md  2011-summary.md  2012-02-21-the-path-learning-python.md  2012-05-11-about-method-of-learning-tech.md  2012-07-30-a-primer-on-python-decorators.md  2013-01-04-decorators-and-functional-python.md  2013-01-26-python-string-format.md  2013-02-27-a-introduction-to-compression.md  2013-04-09-understand-before-solve.md  2013-04-23-technical-person.md  2013-09-28-learning-git-internals-by-example.md  2013-10-16-ha-lb-and-dns.md  2013-11-29-inner-warehouse-monitor-system.md  2014-08-10-ds-4-dse.md  2015-01-03-the-2014-is-gone.md  2015-05-20-fundamentals-of-concurrent-programming.md  2015-06-02-programming-quotes.md  2015-09-11-parallelism-in-one-line.md  2015-10-02-note-of-a-system-fault.md  2015-11-16-another-system-fault.md  2016-01-18-github-fork-pull-request.md  2016-01-24-base64-encoding.md  2016-07-01-mpdp.md  2018-04-01-the-python-guide-book.md  2019-06-26-simplified-reactor-doc-zh.md  2019-08-14-a-python-project-summary.md  2019-09-04-lucene-query-parser-syntax.md  2020-07-13-how-to-profile-jvm-applications.md  2020-07-14-disruptor-wait-strategy-cpu-busy.md  2022-09-14-mmap-ssd.md  2022-11-16-talk-about-how-to-do.md  2024-11-10-leveldb-note-1.md  2024-11-13-leveldb-note-2.md  2024-11-15-leveldb-note-3.md  2024-11-20-leveldb-note-4.md  2024-11-23-leveldb-note-5.md  2024-12-07-arrow-ipc.md  2025-01-09-product-quantizer-tutorial-part-1.md  2025-01-10-product-quantizer-tutorial-part-2.md  2025-01-13-scalar-quantization-101.md  (+28 more)
src/: config.hpp  context.hpp  main.cpp  maker.hpp  md_parser.cpp  md_parser.h  page.cpp  page.h  page_render.cpp  page_render.h  publisher.cpp  publisher.h  server.hpp  test_sqlite.cpp  tester.cpp  web.hpp
src/http/: protocol.hpp  router.hpp
src/parser/: markdown.cpp  markdown.h  markdown_test.cpp  parser.h
src/plugin/: bemathjax.hpp  fekatex.hpp  giscus.hpp  gtalk.hpp  highlight.hpp  mathjax.hpp  mermaid.hpp  plantuml.cpp  plantuml.h  plantuml.hpp  plantuml_test.cpp  plugin.h  plugins.hpp  small_image.hpp  smms.hpp  smms_test.cpp  typst_cmarker_pdf.hpp  typst_pdf.hpp  zeoseven.hpp
src/service/: protocol.h  server.hpp
src/service/http/: base_app.hpp  handler.hpp  protocol.hpp  router.hpp  server.hpp
src/storage/: hn_hnsw.hpp  inverted_index.cpp  inverted_index.h  local_sqlite.cpp  local_sqlite.h
src/task/: hacker_news.cpp  image2base64.cpp  m3u8_to_mp4.cpp  nebula_get.cpp  viewer_stat.cpp
src/tests/: image_test.cpp  markdown_test.cpp  ollama_test.cpp  simd_test.cpp  strings_test.cpp  task_scheduler_test.cpp  tokenizer_test.cpp
src/utils/: blocking_queue.hpp  executor.hpp  guard.hpp  helper.hpp  image.hpp  mmdb.hpp  ollama.hpp  ollama_test.cpp  perf.hpp  rate_limit.hpp  rss.hpp  simd.hpp  simd_test.cpp  strings.hpp  strings_test.cpp  taoli.hpp  task_scheduler.hpp  time.hpp  time_test.cpp  tokenizer.hpp  tokenizer_test.cpp
tests/: format_test.cpp  image_test.cpp  plantuml_test.cpp  smms_test.cpp  task_scheduler_test.cpp  time_test.cpp
themes/default/static/: main.css
themes/default/templates/: base.html  index.html  post.html  posts.html  rss.xml
